--- a/framework/templates/menu.html
+++ b/framework/templates/menu.html
@@ -1,12 +1,25 @@
-<nav id="main-menu" class="navbar navbar-default" role="navigation">
+
+<nav id="main-menu" class="navbar navbar-default" role="navigation" ng-controller="menuController">
+	
 	<div class="navbar-header">
-		<a class="navbar-brand">FRAMEWORK</a>
+		<a href="/" class="navbar-brand">Amsterdam Ultimate 2013</a>
 	</div>
 
 	<div class="collapse navbar-collapse">
 		<ul class="nav navbar-nav">
-			<li class="active"><a>Home</a></li>
+			<li ng-repeat="(name, meta) in mainMenu" ng-class="meta.class"><a href="{{meta.url}}">{{name}}</a></li>
 		</ul>
+
+		<form class="navbar-form navbar-right" role="search">
+			<div class="form-group">
+				<input type="text" class="form-control" placeholder="Username">
+			</div>
+			<div class="form-group">
+				<input type="password" class="form-control" placeholder="Password">
+			</div>
+			<button type="submit" class="btn btn-default">Login</button>
+		</form>
+
 	</div>
 	
 </nav>
