--- a/framework/templates/team.html
+++ b/framework/templates/team.html
@@ -7,7 +7,7 @@
 		<div class="col-mid-12">
 			<div class="media">
 			<span class="pull-left">
-				<img class="media-object" src="{{teamInfo.profile_image_50}}" alt="...">
+				<img class="media-object" src="{{teamInfo.profile_image_50}}" alt="{{teamInfo.name}}">
 			</span>
 			<div class="media-body">
 				<h1 class="media-heading">{{teamInfo.name}}</h1>
